minor SEO changes and removed nav bar

--- a/vueJS/index.html
+++ b/vueJS/index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-	<script src="https://use.fontawesome.com/fa4b0d5c5e.js"></script>
-    <title>goalsnow</title>
+    <meta description="Watch live football/soccer goals and clips.
+    A web app that streams live goals and clips from the subreddit /r/soccer.
+    Built using express.JS/mongoDB, socket.IO and vue.JS">
+	  <script src="https://use.fontawesome.com/fa4b0d5c5e.js"></script>
+    <title>goalsNow | A live stream of goals and clips from the soccer subreddit</title>
   </head>
   <body>
-  	<script src="http://localhost:8000/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>    
-    <script src="https://js.pusher.com/4.1/pusher.min.js"></script>
-
+  	<script src="https://node3-dbhvmzvgfk.now.sh/socket.io/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
 
     <div id="app"></div>
