--- a/vueJS/index.html
+++ b/vueJS/index.html
@@ -8,12 +8,13 @@
 	  <script src="https://use.fontawesome.com/fa4b0d5c5e.js"></script>
     <title>goalsNow | A live stream of goals and clips from the soccer subreddit</title>
   </head>
-  <body>
+  <body class="Site">
   	<script src="https://node3-dbhvmzvgfk.now.sh/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
 
     <div id="app"></div>
     <!-- built files will be auto injected -->
+     
   </body>
 </html>
