cleaner code and small changes

--- a/vueJS/index.html
+++ b/vueJS/index.html
@@ -9,7 +9,7 @@
     <title>goalsNow | A live stream of goals and clips from the soccer subreddit</title>
   </head>
   <body class="Site">
-  	<script src="https://node3-dbhvmzvgfk.now.sh/socket.io/socket.io.js"></script>
+  	<script src="https://goalsnow-backend.herokuapp.com/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
 
